Updates to version 70.

--- a/PB.project
+++ b/PB.project
@@ -3,20 +3,12 @@
     FILESTABLE = {
         FRAMEWORKSEARCH = (); 
         OTHER_SOURCES = (Makefile.preamble, Makefile, Makefile.postamble); 
-        SUBPROJECTS = (
-            bootplib, 
-            bootpd.tproj, 
-            ipconfigd.tproj, 
-            ipconfig.tproj, 
-            bootpc.tproj, 
-            bsdpc.tproj, 
-            DHCPServer
-        ); 
+        SUBPROJECTS = (bootplib, bootpd.tproj, ipconfig.tproj, DHCPServer, IPConfiguration.bproj); 
     }; 
     LANGUAGE = English; 
     LOCALIZABLE_FILES = {}; 
     MAKEFILEDIR = "$(MAKEFILEPATH)/pb_makefiles"; 
-    NEXTSTEP_BUILDTOOL = /bin/gnumake; 
+    NEXTSTEP_BUILDTOOL = /usr/bin/gnumake; 
     NEXTSTEP_COMPILEROPTIONS = "-I../bootplib"; 
     NEXTSTEP_JAVA_COMPILER = /usr/bin/javac; 
     NEXTSTEP_OBJCPLUS_COMPILER = /usr/bin/cc; 
