--- a/ipconfig.tproj/Makefile.preamble
+++ b/ipconfig.tproj/Makefile.preamble
@@ -134,10 +134,7 @@ OTHER_GENERATED_OFILES = $(VERS_OFILE)
 # Change this definition to install projects somewhere other than the
 # standard locations.  NEXT_ROOT defaults to "C:/Apple" on Windows systems
 # and "" on other systems.
-DSTROOT = $(HOME)
-
 ifeq "$(PLATFORM_OS)" "macos" 
-        OTHER_CFLAGS += -DMOSX
+        OTHER_CFLAGS += -DMOSX -DUSE_SYSTEMCONFIGURATION_PUBLIC_APIS
 endif
 
-OTHER_CFLAGS += -I$(DERIVED_SRC_DIR)/..
