--- a/IPConfiguration.bproj/Makefile.postamble
+++ b/IPConfiguration.bproj/Makefile.postamble
@@ -33,8 +33,8 @@
 #  ALL_LFLAGS:  flags to pass when processing .l (lex) files
 #
 #  NAME: name of application, bundle, subproject, palette, etc.
-#  LANGUAGE: langage in which the project is written (default "English")
-#  LOCAL_RESOURCES: localized resources (e.g. nib's, images) of project
+#  LANGUAGES: langages in which the project is written (default "English")
+#  English_RESOURCES: localized resources (e.g. nib's, images) of project
 #  GLOBAL_RESOURCES: non-localized resources of project
 #
 #  SRCROOT:  base directory in which to place the new source files
@@ -98,9 +98,6 @@
 # owned by the top-level Makefile API and no context has been set up for where 
 # derived files should go.
 #
-timer:
-	cc -o timer  -DMOSX -I../bootplib -DDEBUG -DTEST_TIMER timer.c ../bootplib/ptrlist.c ../bootplib/dynarray.c ../bootplib/util.c ../bootplib/ts_log.c -framework CoreFoundation
-
 arptest:
-	cc -g -o arptest  -I../bootplib -DMOSX -DTEST_ARP_SESSION arp_session.c timer.c FDSet.c ../bootplib/ptrlist.c ../bootplib/dynarray.c ../bootplib/util.c ../bootplib/bpflib.c ../bootplib/interfaces.c ../bootplib/ts_log.c -framework CoreFoundation
+	cc -g -o arptest  -I../bootplib -DMOSX -DTEST_ARP_SESSION arp_session.c timer.c FDSet.c ../bootplib/ptrlist.c ../bootplib/dynarray.c ../bootplib/util.c ../bootplib/bpflib.c ../bootplib/interfaces.c -framework CoreFoundation
 
