--- a/IPConfiguration.bproj/Makefile.preamble
+++ b/IPConfiguration.bproj/Makefile.preamble
@@ -77,13 +77,17 @@
 # Library-related variables:
 #    PUBLIC_HEADER_DIR:  Determines where public exported header files
 #	should be installed.  Do not include $(DSTROOT) in this value --
-#	it is prefixed automatically.
+#	it is prefixed automatically.  For library projects you should
+#       set this to something like /Developer/Headers/$(NAME).  Do not set
+#       this variable for framework projects unless you do not want the
+#       header files included in the framework.
 #    PRIVATE_HEADER_DIR:  Determines where private exported header files
 #  	should be installed.  Do not include $(DSTROOT) in this value --
 #	it is prefixed automatically.
 #    LIBRARY_STYLE:  This may be either STATIC or DYNAMIC, and determines
 #  	whether the libraries produced are statically linked when they
-#	are used or if they are dynamically loadable. <<default?>>
+#	are used or if they are dynamically loadable. This defaults to
+#       DYNAMIC.
 #    LIBRARY_DLL_INSTALLDIR:  On Windows platforms, this variable indicates
 #	where to put the library's DLL.  This variable defaults to 
 #	$(INSTALLDIR)/../Executables
@@ -123,6 +127,19 @@ OTHER_GENERATED_OFILES = $(VERS_OFILE)
 # is installed.  By default it is YES.
 # STRIP_ON_INSTALL = NO
 
+# Uncomment to suppress generation of a KeyValueCoding index when installing 
+# frameworks (This index is used by WOB and IB to determine keys available
+# for an object).  Set to YES by default.
+# PREINDEX_FRAMEWORK = NO
+
+# Change this definition to install projects somewhere other than the
+# standard locations.  NEXT_ROOT defaults to "C:/Apple" on Windows systems
+# and "" on other systems.
 ifeq "$(PLATFORM_OS)" "macos"
-        OTHER_CFLAGS += -DMOSX
+        OTHER_CFLAGS += -DMOSX -DUSE_SYSTEMCONFIGURATION_PUBLIC_APIS
 endif
+
+ifeq "$(RC_RELEASE)" "Darwin"
+	OTHER_CFLAGS += -DNO_CFUserNotification
+endif
+
