--- a/IPConfiguration.bproj/PB.project
+++ b/IPConfiguration.bproj/PB.project
@@ -1,49 +1,54 @@
 {
+    BUNDLE_EXTENSION = bundle; 
     DYNAMIC_CODE_GEN = YES; 
+    English_RESOURCES = {}; 
     FILESTABLE = {
         FRAMEWORKS = (CoreFoundation.framework, SystemConfiguration.framework); 
-        FRAMEWORKSEARCH = ("$(NEXT_ROOT)/System/Library/PrivateFrameworks"); 
+        FRAMEWORKSEARCH = (/System/Library/PrivateFrameworks); 
+        HEADERSEARCH = (
+            "$(NEXT_ROOT)$(SYSTEM_LIBRARY_DIR)/Frameworks/System.framework/PrivateHeaders"
+        ); 
         H_FILES = (
-            ipconfigd.h, 
-            server.h, 
-            timer.h, 
+            arp_session.h, 
             bootp_session.h, 
             FDSet.h, 
-            arp_session.h, 
             globals.h, 
+            ipconfigd.h, 
             ipconfigd_globals.h, 
-            ipconfigd_threads.h
+            ipconfigd_threads.h, 
+            server.h, 
+            timer.h
         ); 
         OTHER_LIBS = (bootplib); 
         OTHER_LINKED = (
             arp_session.c, 
             bootp_session.c, 
-            dhcp.c, 
             bootp.c, 
+            dhcp.c, 
             FDSet.c, 
             ipconfigd.c, 
+            manual.c, 
             server.c, 
-            timer.c, 
-            manual.c
+            timer.c
         ); 
-        OTHER_SOURCES = (Makefile.preamble, Makefile, Makefile.postamble); 
-        SUBPROJECTS = (); 
+        OTHER_RESOURCES = (IPConfiguration.xml); 
+        OTHER_SOURCES = (Makefile.preamble, Makefile, Makefile.postamble, CustomInfo.plist); 
     }; 
     LANGUAGE = English; 
-    LOCALIZABLE_FILES = {}; 
     MAKEFILEDIR = "$(MAKEFILEPATH)/pb_makefiles"; 
-    NEXTSTEP_BUILDTOOL = /bin/gnumake; 
-    NEXTSTEP_COMPILEROPTIONS = " -I../bootplib"; 
-    NEXTSTEP_INSTALLDIR = /usr/sbin; 
+    NEXTSTEP_BUILDTOOL = /usr/bin/gnumake; 
+    NEXTSTEP_INSTALLDIR = "$(SYSTEM_LIBRARY_DIR)/SystemConfiguration"; 
     NEXTSTEP_JAVA_COMPILER = /usr/bin/javac; 
     NEXTSTEP_OBJCPLUS_COMPILER = /usr/bin/cc; 
     PDO_UNIX_BUILDTOOL = $NEXT_ROOT/Developer/bin/make; 
-    PDO_UNIX_JAVA_COMPILER = "$(NEXTDEV_BIN)/javac"; 
+    PDO_UNIX_INSTALLDIR = /Library/Bundles; 
+    PDO_UNIX_JAVA_COMPILER = "$(JDKBINDIR)/javac"; 
     PDO_UNIX_OBJCPLUS_COMPILER = "$(NEXTDEV_BIN)/gcc"; 
-    PROJECTNAME = ipconfigd; 
-    PROJECTTYPE = Tool; 
+    PROJECTNAME = IPConfiguration; 
+    PROJECTTYPE = "Loadable Bundle"; 
     PROJECTVERSION = 2.8; 
     WINDOWS_BUILDTOOL = $NEXT_ROOT/Developer/Executables/make; 
+    WINDOWS_INSTALLDIR = /Library/Bundles; 
     WINDOWS_JAVA_COMPILER = "$(JDKBINDIR)/javac.exe"; 
     WINDOWS_OBJCPLUS_COMPILER = "$(DEVDIR)/gcc"; 
 }
