--- a/IPConfiguration.bproj/Makefile.postamble
+++ b/IPConfiguration.bproj/Makefile.postamble
@@ -98,6 +98,6 @@
 # owned by the top-level Makefile API and no context has been set up for where 
 # derived files should go.
 #
-arptest:
+arptest: arp_session.c arp_session.h
 	cc -g -o arptest  -I../bootplib -DMOSX -DTEST_ARP_SESSION arp_session.c timer.c FDSet.c ../bootplib/ptrlist.c ../bootplib/dynarray.c ../bootplib/util.c ../bootplib/bpflib.c ../bootplib/interfaces.c -framework CoreFoundation
 
