--- a/bootplib/Makefile.postamble
+++ b/bootplib/Makefile.postamble
@@ -140,10 +140,13 @@ dhcpopt: dhcp_options.c
 	cc -g -DTEST_DHCP_OPTIONS -o dhcpopt dhcp_options.c ptrlist.c util.c
 
 nbsp: nbsp.c nbsp.h
-	cc -g -DTEST_NBSP -o nbsp nbsp.c ptrlist.c dynarray.c hfsvols.c
+	cc -g -DTEST_NBSP -o nbsp nbsp.c ptrlist.c dynarray.c
 
 hfsvols: hfsvols.c hfsvols.h
 	cc -g -DTEST_HFSVOLS -o hfsvols hfsvols.c ptrlist.c dynarray.c
 
 nbimages: nbimages.c nbimages.h
-	cc -Wall -g -DTEST_NBIMAGES -o nbimages nbimages.c util.c nbsp.c hfsvols.c ptrlist.c dynarray.c cfutil.c -framework CoreFoundation -I$(NET_ROOT)$(SYSTEM_LIBRARY_DIR)/Frameworks/System.framework/PrivateHeaders
+	cc -Wall -g -DTEST_NBIMAGES -o nbimages nbimages.c util.c nbsp.c ptrlist.c dynarray.c cfutil.c -framework CoreFoundation -I$(NET_ROOT)$(SYSTEM_LIBRARY_DIR)/Frameworks/System.framework/PrivateHeaders
+
+subnets: subnetDescr.m subnetDescr.h
+	cc -Wall -g -DTEST_SUBNET_DESCR -o subnets subnetDescr.m -lobjc NIDomain.c dynarray.c ptrlist.c clientTypes.m util.c
